--- a/css/agend.css
+++ b/css/agend.css
@@ -158,6 +158,24 @@ nav{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    position: relative;
+}
+.eaimg_over{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 6;
+    top: 0;
+    left: 0;
+    transform: translate(0%,0%);
+    background-color: rgba(251,118,96, 0);
+    -webkit-transition: background-color 0.2s ease;
+    -moz-transition: background-color 0.2s ease;
+    -o-transition: background-color 0.2s ease;
+    transition: background-color 0.2s ease;
+}
+.age_eabox:hover .eaimg_over,.age_eabox:active .eaimg_over,.age_eabox:focus .eaimg_over{
+    background-color: rgba(251,118,96, 0.4);
 }
 .age_eatitl{
     font-family: poppins;
@@ -169,4 +187,5 @@ nav{
     font-family: poppins;
     font-weight: 600;
     font-size: 14px;
+    color: rgb(30,30,30);
 }
