--- a/css/home.css
+++ b/css/home.css
@@ -715,7 +715,8 @@ nav.scroll{
     .navburger{
         height: 70px;
         width: 50px;
-        display:block;
+        display:flex;
+        display:-webkit-flex;
         background-image: url(img/nav_burger.svg);
         background-size: contain;
         background-repeat: no-repeat;
@@ -1239,7 +1240,7 @@ nav.scroll{
     .hmain_btxt1, .hmain_btxt2,.hmain_btxt3{
         width: auto;
         font-size: 18px;
-    margin: 0px 60px 30px 40px;
+    margin: 0px 60px 30px 30px;
 }
     .hmoreico{
         font-size: 70px;
@@ -1248,10 +1249,10 @@ nav.scroll{
     }
     .hmain_stitl{
         font-size: 26px;
-        margin: 0px 60px 0px 40px;
+        margin: 0px 60px 0px 30px;
     }
     .hmain_stxt1{
-        margin: 0px 0px 0px 40px;
+        margin: 0px 0px 0px 30px;
     align-self: flex-start;
     }
     .hmain_secs, .hmain_secp, .hmain_sece, .hmain_seca, .hmain_secr{
@@ -1429,6 +1430,22 @@ nav.scroll{
         font-family: poppins;
         font-size: 24px;
     }
+    .np_back{
+        height: 40px;
+        width: 60px;
+    }
+    
+    .np_butts{
+        font-size: 18px;
+        margin: 0px 0px 30px 0px;
+    }
+    .np_langs{
+        font-size: 16px;
+    }
+    .np_social{
+        height: 30px;
+        width: 30px;
+    }
     .navburger{
         height: 30px;
         width: 40px;
@@ -1498,6 +1515,12 @@ nav.scroll{
     }
 }
 @media only screen and (max-height: 360px){
+    .np_butts{
+        margin: 0px 0px 20px 0px;
+    }
+    .np_cont{
+        margin-bottom: 10px;
+    }
     #head_shirt{
     padding: 0px 60px 0px 60px;
 }
